# ares

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  THREAT_MODEL.md  package.json
.github/workflows/: eval-baruch.yml  npm-publish.yml  release-draft.yml
docs/design/: ARES_runtime_portability_plan.md  MISHKAN_agent_aliases.md  MISHKAN_decisions.md  MISHKAN_harness_design.md  MISHKAN_observability.md  MISHKAN_token_optimisation.md
docs/engineer/: README.md  profile.example.md
docs/research/: graphify-token-saving-poc.md
docs/usage/: 01-installation.md  02-project-init.md  03-orchestration.md  04-memory-layer.md  05-selective-ingest.md  06-llm-providers.md  07-troubleshooting.md  08-glossary.md  09-workflows.md  10-observability.md  11-graphify.md  12-cli.md  12-skill-discovery.md  README.md
payload/core/: README.md  manifest.json
payload/install/: settings.hooks.json
payload/mishkan/: AGENT_SPEC.md  ontology.md  ontology.ttl
payload/mishkan/agents/: ahikam.md  aholiab.md  asaph.md  baruch.md  benaiah.md  bezalel.md  caleb.md  deborah.md  elasah.md  eliashib.md  ezra.md  hanun.md  hiram.md  hizkiah.md  huldah.md  huram.md  hushai.md  igal.md  ira.md  jahaziel.md  jakin.md  jehonathan.md  jehoshaphat.md  joab.md  joah.md  maaseiah.md  meremoth.md  meshullam.md  nathan.md  nehemiah.md  obed.md  oholiab.md  palal.md  phinehas.md  rehum.md  salma.md  seraiah.md  shallum.md  shaphan.md  shemaiah.md  (+5 more)
payload/mishkan/observability/watch/: README.md  pyproject.toml
payload/mishkan/observability/watch/src/mishkan_watch/: __init__.py  __main__.py  app.py  client.py  org_data.py  skills_data.py  theme.tcss
payload/mishkan/observability/watch/src/mishkan_watch/tabs/: __init__.py  activity.py  agents.py  knowledge.py  live.py  org.py  skills.py  usage.py  workflows.py
payload/mishkan/observability/watchd/: README.md  pyproject.toml
payload/mishkan/observability/watchd/src/mishkan_watchd/: __init__.py  __main__.py  lifecycle.py  server.py  state.py
payload/mishkan/observability/watchd/src/mishkan_watchd/sources/: __init__.py  bus_tail.py  cognee_poll.py  graphify_tail.py  mcp_probe.py  opencode_storage.py  session_discover.py  session_tail.py  subagent_tail.py  worktree_poll.py
payload/mishkan/observability/watchd/tests/: test_state.py
payload/targets/: index.json
payload/user/: CLAUDE.md
scripts/: check-cli.mjs  check-compose.mjs  check-curated.mjs  check-docs.mjs  check-hooks.mjs  check-ingest.mjs  check-layout.mjs  check-observability.mjs  check-package.mjs  check-packlist.mjs  check-runtime-clis.mjs  check-work-store.mjs
(+165 files in other folders)
