[project]
name = "ares-watch"
version = "0.2.7"
description = "ARES observability TUI — Textual client that reads the ares-watchd UNIX socket and renders the dashboard."
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Y4NN"}]

dependencies = [
    "textual>=0.80",
]

[project.scripts]
ares-watch = "mishkan_watch.__main__:cli"
mishkan-watch = "mishkan_watch.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mishkan_watch"]
