[project]
name = "mishkan-watchd"
version = "0.1.0"
description = "MISHKAN observability daemon — aggregates event bus + filesystem polls into a UNIX-socket snapshot+delta stream for mishkan-watch."
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Y4NN"}]

dependencies = [
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.scripts]
mishkan-watchd = "mishkan_watchd.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mishkan_watchd"]
