[project]
name = "ares-watchd"
version = "0.2.7"
description = "ARES observability daemon — aggregates event bus + filesystem polls into a UNIX-socket snapshot+delta stream for ares-watch."
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Y4NN"}]

dependencies = [
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.scripts]
ares-watchd = "mishkan_watchd.__main__:cli"
mishkan-watchd = "mishkan_watchd.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mishkan_watchd"]
